tests/backend/zero_alloc_checker/fail9.output
File "fail9.ml", line 1, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail9.g (camlFail9.g_HIDE_STAMP)
